<resources>
    <string name="app_name">Moodify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diall_button">Diall button</string>
    <string name="anxious_mood">anxious mood</string>
    <string name="sad_mood">sad mood</string>
    <string name="soso_mood">soso mood</string>
    <string name="good_mood">good mood</string>
    <string name="happy_mood">happy mood</string>
</resources>